--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Translade is a bot where you can translate your language to a different on right from discord",
   "main": "bot.js",
   "scripts": {
-    "test": "node ."
+    "test": "node .",
+    "start": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,16 @@
   "bugs": {
     "url": "https://github.com/Nigelrex/Translade/issues"
   },
-  "homepage": "https://github.com/Nigelrex/Translade#readme"
+  "homepage": "https://github.com/Nigelrex/Translade#readme",
+  "dependencies": {
+    "@google-cloud/translate": "^6.2.2",
+    "@vitalets/google-translate-api": "^7.0.0",
+    "discord.js": "^12.5.3",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "fs-extra": "^10.0.0",
+    "log-to-file": "^2.0.2",
+    "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.7"
+  }
 }
